test `connection overrides` (#107)
We need to test that runtime/simulation changes to the synapses really
trickle down to neuron

- [x] Add a test where the synapse parameters are changed. Expand from
the `ringcells` test.
Following
[this](https://sonata-extension.readthedocs.io/en/latest/sonata_simulation.html#connection-overrides):
  - [x] only source -> target ones should be affected
  - [x] `spont_minis`: issue for later #114
- [x] `weight` EDIT: this is actually a multiplier of `conductance` to
get the final, neuron `weight`: `weight_co` * `conductance` = `weight_n`
where:
    - `co` is `connection_overrides`
    - `n` is `NEURON`
- [x] create issue and improve
[docs](https://github.com/openbraininstitute/sonata-extension)
  - [x] `weight == 0.0` is it removed? yes
  - [x] `synapse_configure`
  - [x] what happens if it is empty? nothing
  - [x] `modoverride`
  - [x] `synapse_delay_override`
  - [x] `delay`
  - [x] 0 delay does nothing
  - [x] `neuromodulation_dtc`: issue for later #113
  - [x] `neuromodulation_strength`: issue for later #113
- [x] Fix and improve `test_ringcells.py`
  - [x] sort imports
  - [x] move helper functions in a `utils.py` file to be reused
  - [x] make tests a package
  - [x] rework applying SRP `check_netcons` 
  - [x] test the utils functions
- [x] `test_synweight_delay`: removed as it became obsolete

- [x] a dry run test sometimes fails in the CI (#45). I extend the
workaround to all the systems

Fix: #55, #104, #105

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ deps =
     morphio
 setenv =
     NEURON_INIT_MPI=0
+    PYTHONPATH={toxinidir}
 allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
     sh
