--- a/tox.ini
+++ b/tox.ini
@@ -39,12 +39,13 @@ deps =
     morphio
 setenv =
     NEURON_INIT_MPI=0
+    PYTHONPATH={toxinidir}
 allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
     sh
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
-    sh -c ". {toxworkdir}/.envfile && pytest -x --forked --basetemp=removeme {posargs:tests/unit/test_current_injection.py}"
+    sh -c ". {toxworkdir}/.envfile && pytest -x --forked --basetemp=removeme {posargs:tests/unit/test_connection_overrides.py}"
 
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
