fix baseline importing utils

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,8 @@ deps =
 deps =
     {[testenv]deps}
     pytest-cov
+setenv =
+    PYTHONPATH={toxinidir}
 commands =
     pytest --cov=neurodamus --cov-report=term-missing tests/test_import.py
 
