--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,8 @@ deps =
 deps =
     {[testenv]deps}
     pytest-cov
+setenv =
+    PYTHONPATH={toxinidir}
 commands =
     pytest --cov=neurodamus --cov-report=term-missing tests/test_import.py
 
@@ -30,6 +32,22 @@ allowlist_externals =
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
+
+[testenv:removeme]
+deps =
+    {[testenv]deps}
+    pytest-cov
+    neuron
+    morphio
+setenv =
+    NEURON_INIT_MPI=0
+    PYTHONPATH={toxinidir}
+allowlist_externals =
+    {toxinidir}/ci/build_ndcore.sh
+    sh
+commands =
+    {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
+    sh -c ". {toxworkdir}/.envfile && pytest -x --basetemp=removeme --forked {posargs:tests/unit/test_test_utils.py}"
 
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
