--- a/tox.ini
+++ b/tox.ini
@@ -58,7 +58,7 @@ setenv =
     NEURON_INIT_MPI=1
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
-    pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/integration-e2e}
+    pytest -s -x -v --durations=5 --durations-min=15 'tests/integration-e2e/test_multicycle_runs.py::test_v5_sonata_multisteps[create_tmp_simulation_config_file0]'
 
 [testenv:scientific]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
