use neuron-nightly wheel for unit tests with CoreNEURON

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ commands =
 deps =
     {[testenv]deps}
     pytest-cov
-    neuron
+    neuron-nightly
     morphio
 setenv =
     NEURON_INIT_MPI=0
