--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,33 @@ commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
 
+[testenv:removeme]
+deps =
+    {[testenv]deps}
+    pytest-cov
+    neuron-nightly
+    morphio
+setenv =
+    NEURON_INIT_MPI=1
+    PYTHONPATH={toxinidir}
+allowlist_externals =
+    {toxinidir}/ci/build_ndcore.sh
+    sh
+commands =
+    {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
+    sh -c ". {toxworkdir}/.envfile && pytest -x --verbose-mpi {posargs:tests/unit/test_mpi.py}"
+
+; [testenv:removeme]
+; # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
+; passenv = *
+; setenv =
+;     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+;     HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
+;     NEURON_INIT_MPI=1
+; commands =
+;     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
+;     pytest -x --verbose-mpi {posargs:tests/unit/test_mpi.py}
+
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
 passenv = *
