--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ allowlist_externals =
     sh
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
-    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
+    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --basetemp=removeme3 {posargs:tests/unit/test_cell.py}"
 
 [testenv:removeme]
 deps =
@@ -40,7 +40,7 @@ deps =
     neuron-nightly
     morphio
 setenv =
-    NEURON_INIT_MPI=1
+    NEURON_INIT_MPI=0
     PYTHONPATH={toxinidir}
 allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
