--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,19 @@ commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
 
+[testenv:mpi]
+# Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
+passenv = *
+setenv =
+    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+    HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
+    NEURON_INIT_MPI=1
+allowlist_externals =
+    mpiexec
+commands =
+    python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
+    mpiexec -n 2 pytest --with-mpi {posargs:tests/mpi}
+
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
 passenv = *
