first version of pytest-isolate-mpi integration that works

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 name = neurodamus
 
 [tox]
-envlist = flake8, format, unit, baseline, integration-e2e, scientific
+envlist = flake8, format, unit, baseline, mpi, integration-e2e, scientific
 
 [testenv]
 deps =
@@ -34,17 +34,18 @@ commands =
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
 
 [testenv:mpi]
-# Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
+# Please you need to spack load neurodamus-models model=neocortex +coreneuron
+# or use an equivalent spack virtual env
 passenv = *
+deps =
+    -r tests/mpi/requirements.txt
 setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
     HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
     NEURON_INIT_MPI=1
-allowlist_externals =
-    mpiexec
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
-    mpiexec -n 2 pytest --with-mpi {posargs:tests/mpi}
+    pytest {posargs:tests/mpi}
 
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
