--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 name = neurodamus
 
 [tox]
-envlist = flake8, format, unit, baseline, mpi, integration-e2e, scientific
+envlist = flake8, format, unit, unit-mpi, baseline, integration-e2e, scientific
 
 [testenv]
 deps =
@@ -33,19 +33,20 @@ commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
 
-[testenv:mpi]
+[testenv:unit-mpi]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron
 # or use an equivalent spack virtual env
 passenv = *
 deps =
-    -r tests/mpi/requirements.txt
+    pytest-cov
+    -r tests/unit-mpi/requirements.txt
 setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
     HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
     NEURON_INIT_MPI=1
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
-    pytest -x {posargs:tests/mpi}
+    pytest -x --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-mpi}
 
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
