--- a/.github/workflows/simulation_test.yml
+++ b/.github/workflows/simulation_test.yml
@@ -243,6 +243,10 @@ jobs:
     - name: unit
       run: |
         tox -e unit
+
+    - name: unit-mpi
+      run: |
+        tox -e unit-mpi
       
     - name: baseline
       run: |
