--- a/tox.ini
+++ b/tox.ini
@@ -114,3 +114,10 @@ commands =
     make clean
     make html SPHINXOPTS=-W  # make warnings into errors with -W sphinx option
 allowlist_externals = make
+
+
+[testenv:removeme]
+deps =
+    mpi4py
+commands =
+    mpirun -n 2 python tests/mpi_hello_world.py
