--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Test raw MPI call
       run: |
         python -m pip install mpi4py
-        mpirun -n 2 python mpi_hello_world.py
+        mpiexec -n 2 python mpi_hello_world.py
 
     - name: Tox raw MPI test
       run: tox -e removeme
