--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -25,8 +25,12 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y mpich libmpich-dev libhdf5-mpich-dev
+        sudo apt-get install -y mpich libmpich-dev libhdf5-mpich-dev libfabric1
         python -m pip install --upgrade pip tox coverage
+
+    - name: Install MPI Python binding
+      run: python -m pip install mpi4py
+
 
     # - name: Run tox baseline
     #   run: |
