--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -25,11 +25,9 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y mpich libmpich-dev libhdf5-mpich-dev libfabric1
+        sudo apt-get install -y libmpich-dev python3-dev
         python -m pip install --upgrade pip tox coverage
 
-    - name: Install MPI Python binding
-      run: python -m pip install mpi4py
 
 
     # - name: Run tox baseline
@@ -55,7 +53,7 @@ jobs:
 
     - name: Test raw MPI call
       run: |
-        python -m pip install mpi4py
+        python -c "from mpi4py import MPI"
         mpiexec -n 2 python mpi_hello_world.py
 
     - name: Tox raw MPI test
