--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libmpich-dev python3-dev
-        python -m pip install --upgrade pip tox coverage mpi4py
+        sudo apt install python3-mpi4py
+        python -c "from mpi4py import MPI"
 
 
 
