--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -22,11 +22,25 @@ jobs:
       with:
         python-version: '3.9'
 
-    - name: Install dependencies
+    - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt install -y python3-mpi4py
+        sudo apt-get install -y mpich libmpich-dev
+    
+    - name: Upgrade pip and install base Python packages
+      run: |
+        python -m venv venv
+        source venv/bin/activate
+        python -m pip install --upgrade pip setuptools
+        pip install mpi4py
         python -c "from mpi4py import MPI"
+
+    - name: Add virtual environment to PATH
+      run: echo "${{ github.workspace }}/venv/bin" >> $GITHUB_PATH
+
+    - name: Install test dependencies
+      run: |
+        python -m pip install --upgrade pip tox
 
 
 
