--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -27,21 +27,23 @@ jobs:
         nproc
         sudo apt-get update
         sudo apt-get install -y mpich libmpich-dev
+        mpicc -o mpi_hello_world mpi_hello_world.c
+        mpiexec -n 2 ./mpi_hello_world
     
-    - name: Upgrade pip and install base Python packages
-      run: |
-        python -m venv venv
-        source venv/bin/activate
-        python -m pip install --upgrade pip setuptools
-        pip install mpi4py
-        python -c "from mpi4py import MPI"
+    # - name: Upgrade pip and install base Python packages
+    #   run: |
+    #     python -m venv venv
+    #     source venv/bin/activate
+    #     python -m pip install --upgrade pip setuptools
+    #     pip install mpi4py
+    #     python -c "from mpi4py import MPI"
 
-    - name: Add virtual environment to PATH
-      run: echo "${{ github.workspace }}/venv/bin" >> $GITHUB_PATH
+    # - name: Add virtual environment to PATH
+    #   run: echo "${{ github.workspace }}/venv/bin" >> $GITHUB_PATH
 
-    - name: Install test dependencies
-      run: |
-        python -m pip install --upgrade pip tox
+    # - name: Install test dependencies
+    #   run: |
+    #     python -m pip install --upgrade pip tox
 
 
 
@@ -66,21 +68,21 @@ jobs:
     #   with:
     #     flag-name: unit
 
-    - name: Test raw MPI call
-      run: |
-        python -c "from mpi4py import MPI"
-        mpiexec -n 2 python mpi_hello_world.py
+    # - name: Test raw MPI call
+    #   run: |
+    #     python -c "from mpi4py import MPI"
+    #     mpiexec -n 2 python mpi_hello_world.py
 
-    - name: Tox raw MPI test
-      run: tox -e removeme
+    # - name: Tox raw MPI test
+    #   run: tox -e removeme
 
-    - name: Run tox unit-mpi
-      run: |
-        rm -rf .coverage
-        tox -e unit-mpi
+    # - name: Run tox unit-mpi
+    #   run: |
+    #     rm -rf .coverage
+    #     tox -e unit-mpi
 
-    - name: Coveralls
-      if: ${{ matrix.os == 'ubuntu-latest' }}
-      uses: coverallsapp/github-action@v2
-      with:
-        flag-name: unit-mpi
+    # - name: Coveralls
+    #   if: ${{ matrix.os == 'ubuntu-latest' }}
+    #   uses: coverallsapp/github-action@v2
+    #   with:
+    #     flag-name: unit-mpi
