--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -26,10 +26,12 @@ jobs:
       run: |
         nproc
         sudo apt-get update
-        sudo apt-get install -y mpich libmpich-dev
+        sudo apt upgrade -y
+        sudo apt-get install -y build-essential
+        sudo apt-get install -y libopenmpi-dev openmpi-bin
         echo $MPIEXEC
         mpicc -o mpi_hello_world mpi_hello_world.c
-        mpiexec -n 4 -v -host localhost ./mpi_hello_world
+        mpiexec -n 2 -v -host localhost ./mpi_hello_world
     
     # - name: Upgrade pip and install base Python packages
     #   run: |
