--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -29,7 +29,7 @@ jobs:
     
     - name: Upgrade pip and install base Python packages
       run: |
-        pip install mpi4py
+        pip install tox mpi4py
 
     # - name: Run tox baseline
     #   run: |
