--- a/tox.ini
+++ b/tox.ini
@@ -34,20 +34,36 @@ commands =
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
 
 [testenv:unit-mpi]
-# Please you need to spack load neurodamus-models model=neocortex +coreneuron
-# or use an equivalent spack virtual env
-passenv = *
 deps =
+    {[testenv]deps}
     pytest-cov
-    -r tests/requirements.txt
     -r tests/unit-mpi/requirements.txt
+    neuron-nightly
 setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
-    HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
     NEURON_INIT_MPI=1
+allowlist_externals =
+    {toxinidir}/ci/build_ndcore.sh
+    sh
 commands =
-    python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
-    pytest -x --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-mpi}
+    {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
+    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-mpi}"
+; [testenv:unit-mpi]
+; # Please you need to spack load neurodamus-models model=neocortex +coreneuron
+; # or use an equivalent spack virtual env
+; passenv = *
+; deps =
+;     pytest-cov
+;     neuron-nightly
+;     -r tests/requirements.txt
+;     -r tests/unit-mpi/requirements.txt
+; setenv =
+;     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+;     HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
+;     NEURON_INIT_MPI=1
+; commands =
+;     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
+;     pytest -x --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-mpi}
 
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
@@ -114,10 +130,3 @@ commands =
     make clean
     make html SPHINXOPTS=-W  # make warnings into errors with -W sphinx option
 allowlist_externals = make
-
-
-[testenv:removeme]
-deps =
-    mpi4py
-commands =
-    mpirun -n 2 python tests/mpi_hello_world.py
