--- a/tox.ini
+++ b/tox.ini
@@ -42,6 +42,7 @@ deps =
 setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
     NEURON_INIT_MPI=1
+    COVERAGE_PROCESS_START={toxinidir}/coverage.ini
 allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
     sh
