--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -26,10 +26,6 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y libopenmpi-dev openmpi-bin
-    
-    - name: Upgrade pip and install base Python packages
-      run: |
-        pip install tox mpi4py
 
     # - name: Run tox baseline
     #   run: |
@@ -52,10 +48,22 @@ jobs:
     #   with:
     #     flag-name: unit
 
+    - name: Check for coverage files before running tox
+      run: |
+        echo "Checking for coverage files before running tox"
+        ls -alh .coverage*
+        ls -alh  # List all files in the directory
+
     - name: Run tox unit-mpi
       run: |
         rm -rf .coverage
         tox -e unit-mpi
+
+    - name: Check for coverage files after running tox
+      run: |
+        echo "Checking for coverage files after running tox"
+        ls -alh .coverage*
+        ls -alh  # List all files in the directory
 
     - name: Coveralls
       if: ${{ matrix.os == 'ubuntu-latest' }}
