--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -27,6 +27,10 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y libopenmpi-dev openmpi-bin
 
+    - name: Upgrade pip and install base Python packages
+      run: |
+        pip install tox
+
     # - name: Run tox baseline
     #   run: |
     #     tox -e baseline
