--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,7 @@ commands =
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
 
 [testenv:unit-mpi]
+passenv = *
 deps =
     {[testenv]deps}
     pytest-cov
