--- a/tox.ini
+++ b/tox.ini
@@ -34,21 +34,17 @@ commands =
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
 
 [testenv:unit-mpi]
+# Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
 passenv = *
 deps =
-    {[testenv]deps}
-    pytest-cov
-    neuron-nightly
     -r tests/unit-mpi/requirements.txt
 setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+    HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
     NEURON_INIT_MPI=1
-allowlist_externals =
-    {toxinidir}/ci/build_ndcore.sh
-    sh
 commands =
-    {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
-    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-mpi}"
+    python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
+    pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/unit-mpi}
 
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
