--- a/tox.ini
+++ b/tox.ini
@@ -37,6 +37,7 @@ commands =
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
 passenv = *
 deps =
+    pytest-cov
     -r tests/unit-mpi/requirements.txt
 setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
@@ -44,7 +45,7 @@ setenv =
     NEURON_INIT_MPI=1
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
-    pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/unit-mpi}
+    pytest -s -x --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-mpi}
 
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
