--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,7 @@ commands =
 passenv = *
 deps =
     pytest-cov
+    -r tests/requirements.txt
     -r tests/unit-mpi/requirements.txt
 setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
