RDMAV_FORK_SAFE=1

--- a/tox.ini
+++ b/tox.ini
@@ -44,6 +44,7 @@ deps =
 setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
     NEURON_INIT_MPI=1
+    RDMAV_FORK_SAFE=1
 allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
     sh
