--- a/tox.ini
+++ b/tox.ini
@@ -53,7 +53,8 @@ setenv =
     NEURON_INIT_MPI=1
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
-    pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/scientific}
+    #pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/scientific}
+    pytest -s -x --durations=5 --durations-min=15 tests/scientific/test_multipop.py::test_multipop_full_conn
 
 [testenv:scientific-ngv]
 # Please you need to spack load neurodamus-models model=neocortex +ngv+metabolism or use an equivalent spack virtual env
