--- a/tox.ini
+++ b/tox.ini
@@ -50,7 +50,7 @@ allowlist_externals =
     sh
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
-    sh -c ". {toxworkdir}/.envfile && pytest -x -v --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-mpi}"
+    sh -c ". {toxworkdir}/.envfile && pytest -x --verbose-mpi --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-mpi}"
 
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
