--- a/tox.ini
+++ b/tox.ini
@@ -42,7 +42,7 @@ deps =
     neuron-nightly
     -r tests/unit-mpi/requirements.txt
 setenv =
-    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+    PYTHONPATH={toxinidir}
     NEURON_INIT_MPI=1
     RDMAV_FORK_SAFE=1
 allowlist_externals =
