--- a/tox.ini
+++ b/tox.ini
@@ -42,7 +42,7 @@ deps =
     neuron-nightly
     -r tests/unit-mpi/requirements.txt
 setenv =
-    PYTHONPATH={toxinidir}
+    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
     NEURON_INIT_MPI=1
     RDMAV_FORK_SAFE=1
 allowlist_externals =
@@ -50,7 +50,7 @@ allowlist_externals =
     sh
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
-    sh -c ". {toxworkdir}/.envfile && printenv && pytest -x -s -vv --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-mpi}"
+    sh -c ". {toxworkdir}/.envfile && echo AAAAAAAAA && echo $PYTHONPATH && pytest -x -s -vv --cov=neurodamus --cov-report=term-missing {posargs:tests/unit-mpi}"
 
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
