--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,9 @@ envlist = flake8, format, unit, baseline, integration-e2e, scientific
 deps =
     -r tests/requirements.txt
 
+[coverage:run]
+data_file = .coverage.{envname}
+
 [testenv:baseline]
 deps =
     {[testenv]deps}
