--- a/tox.ini
+++ b/tox.ini
@@ -8,15 +8,13 @@ envlist = flake8, format, unit, baseline, integration-e2e, scientific
 deps =
     -r tests/requirements.txt
 
-[coverage:run]
-data_file = .coverage.{envname}
-
 [testenv:baseline]
 deps =
     {[testenv]deps}
     pytest-cov
 setenv =
     PYTHONPATH={toxinidir}
+    COVERAGE_FILE = .coverage.baseline
 commands =
     pytest --cov=neurodamus --cov-report=term-missing tests/test_import.py
 
@@ -29,6 +27,7 @@ deps =
 setenv =
     NEURON_INIT_MPI=0
     PYTHONPATH={toxinidir}
+    COVERAGE_FILE = .coverage.unit
 allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
     sh
