let pytest handle prepending `tests` dir, instead of using the heavy duty PYTHONPATH override

--- a/tox.ini
+++ b/tox.ini
@@ -12,8 +12,6 @@ deps =
 deps =
     {[testenv]deps}
     pytest-cov
-setenv =
-    PYTHONPATH={toxinidir}
 commands =
     pytest --cov=neurodamus --cov-report=term-missing tests/test_import.py
 
@@ -25,7 +23,6 @@ deps =
     morphio
 setenv =
     NEURON_INIT_MPI=0
-    PYTHONPATH={toxinidir}
 allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
     sh
@@ -37,7 +34,7 @@ commands =
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
 passenv = *
 setenv =
-    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+    PYTHONPATH={env:PYTHONPATH}
     HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
     NEURON_INIT_MPI=1
 commands =
@@ -48,7 +45,7 @@ commands =
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
 passenv = *
 setenv =
-    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+    PYTHONPATH={env:PYTHONPATH}
     HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
     NEURON_INIT_MPI=1
 commands =
@@ -62,7 +59,7 @@ deps =
     morphio
 passenv = *
 setenv =
-    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+    PYTHONPATH={env:PYTHONPATH}
     HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
     NEURON_INIT_MPI=1
 commands =
