--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -15,31 +15,58 @@ jobs:
       fail-fast: false
 
     steps:
+      - uses: actions/checkout@v4
 
-    - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
 
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.9'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip tox coverage
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip tox coverage
+      - name: Run tox baseline
+        run: |
+          tox -e baseline
+          mv .coverage .coverage.baseline
+          coverage xml -o coverage.baseline.xml
 
-    - name: Run tox baseline
-      run: tox -e baseline
+      - name: Run tox unit
+        run: |
+          tox -e unit
+          mv .coverage .coverage.unit
+          coverage xml -o coverage.unit.xml
 
-    - name: Run tox unit
-      run: tox -e unit
+      - name: Combine coverage files
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: |
+          coverage combine .coverage.baseline .coverage.unit
+          coverage xml -o coverage.total.xml
 
-    - name: Combine coverage files
-      if: ${{ matrix.os == 'ubuntu-latest' }}
-      run: |
-        coverage combine .coverage.baseline .coverage.unit
-        coverage xml
+      - name: Coveralls (total)
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        uses: coverallsapp/github-action@v2
+        with:
+          path-to-xml: coverage.total.xml
 
-    - name: Coveralls
-      if: ${{ matrix.os == 'ubuntu-latest' }}
-      uses: coverallsapp/github-action@v2
-      with:
-        path-to-xml: coverage.xml
+      - name: Coveralls (baseline)
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        uses: coverallsapp/github-action@v2
+        with:
+          path-to-xml: coverage.baseline.xml
+          flag-name: baseline
+          parallel: true
+
+      - name: Coveralls (unit)
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        uses: coverallsapp/github-action@v2
+        with:
+          path-to-xml: coverage.unit.xml
+          flag-name: unit
+          parallel: true
+
+      - name: Coveralls finish
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        uses: coverallsapp/github-action@v2
+        with:
+          parallel-finished: true
