--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -15,53 +15,50 @@ jobs:
       fail-fast: false
 
     steps:
+      - uses: actions/checkout@v4
 
-    - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
 
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.9'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip tox coverage
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip tox coverage
+      - name: Run tox baseline
+        run: |
+          tox -e baseline
 
-    - name: Run tox baseline
-      run: |
-        tox -e baseline
-        COVERAGE_FILE=.coverage.baseline coverage report
-        COVERAGE_FILE=.coverage.baseline coverage xml -o coverage.baseline.xml
+      - name: Upload baseline coverage to Coveralls
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        uses: coverallsapp/github-action@v2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          file: .coverage.baseline
+          flag-name: baseline
+          parallel: true
 
-    - name: Run tox unit
-      run: |
-        tox -e unit
-        COVERAGE_FILE=.coverage.baseline coverage report
-        COVERAGE_FILE=.coverage.unit coverage xml -o coverage.unit.xml
+      - name: Run tox unit
+        run: |
+          rm -rf .coverage
+          tox -e unit
 
-    - name: Coveralls (baseline)
-      if: ${{ matrix.os == 'ubuntu-latest' }}
-      uses: coverallsapp/github-action@v2
-      with:
-        file: coverage.baseline.xml
-        flag-name: baseline
-        parallel: true
+      - name: Upload unit coverage to Coveralls
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        uses: coverallsapp/github-action@v2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          file: .coverage.unit
+          flag-name: unit
+          parallel: true
 
-    - name: Coveralls (unit)
-      if: ${{ matrix.os == 'ubuntu-latest' }}
-      uses: coverallsapp/github-action@v2
-      with:
-        file: coverage.unit.xml
-        flag-name: unit
-        parallel: true
-
-    - name: Combine coverage files and show summary
-      if: ${{ matrix.os == 'ubuntu-latest' }}
-      run: |
-        coverage combine .coverage.baseline .coverage.unit
-        coverage report
-
-    - name: Finish Coveralls parallel
-      if: ${{ matrix.os == 'ubuntu-latest' }}
-      uses: coverallsapp/github-action@v2
-      with:
-        parallel-finished: true
+  finish:
+    if: ${{ always() }}
+    needs: coverage
+    runs-on: ubuntu-latest
+    steps:
+      - name: Finalize Coveralls parallel build
+        uses: coverallsapp/github-action@v2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          parallel-finished: true
